# Creatures-EggForge-Tauri

./: .gitignore  CHANGELOG.MD  IndexWithPagesTemplate.html  README.md  compile-icons.command  copyVersionToTauri.cjs  index.html  package-lock.json  package.json  prepare_dist.cjs  prepare_dist.sh
.github/workflows/: tauri-release.yaml
src/: style.css  style.css.map  style.less
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/genomes/: ettin.46e.gen  ettin.46e.gno  ettin.twb.gen  ettin.twb.gno  gren.46g.gen  gren.46g.gno  gren.tcb.gen  gren.tcb.gno  norn.ex48.gen  norn.ex48.gno  norn.twb.gen  norn.twb.gno  twb.gen  twb.gno
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/src/: add_att_directory.rs  add_previous_genomes_to_scope.rs  config.rs  dialog.rs  import_egg.rs  js.rs  main.rs  menu.rs  open_project.rs  save_dialog.rs  view_mode.rs  window.rs
src/assets/genomes/: norn.siamese.cfem.gen  norn.siamese.cfem.gno  norn.siamese.twb.gen
src/css/: _colors.less  _colors_page_button.less  _colors_page_button_complete.less  _colors_page_button_error.less  _colors_page_button_standard.less  _compile_controls.less  _constants.less  _controls_buttons.less  _controls_file_buttons.less  _controls_input_button.less  _controls_input_fields.less  _controls_inputs.less  _controls_refresh.less  _controls_selects.less  _flex.less  _glyph.less  _header.less  _logger_bubble.less  _page_buttons.less  _pages.less  _placeholders.less  colors.css  colors.css.map  colors.less  compile_report.less  controls.less  egg_load_progress_logger.less  flex.css  flex.css.map  flex.less  layout.less  log_panel.less  logger_panel.less  style.css  style.css.map  style.less
