[package]
name = "egg-forge"
version = "0.0.0"
description = "A Creatures 3 egg agent compiler"
authors = ["bedalton"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = [ "window-set-title", "fs-create-dir", "os-all", "path-all", "dialog-message", "fs-write-file", "fs-read-dir", "fs-exists", "fs-read-file", "dialog-save", "dialog-open", "shell-open"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
