[package]
name = "egg-forge"
version = "0.3.0"
description = "A Creatures 3 egg agent compiler"
authors = ["bedalton"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.1", features = [ "fs-create-dir", "updater", "window-set-title", "os-all", "path-all", "dialog-message", "fs-write-file", "fs-read-dir", "fs-exists", "fs-read-file", "dialog-save", "dialog-open", "shell-open"] }
rand = "0.7.3"
anyhow = "1.0.86"

[target.'cfg(target_os = "macos")'.dependencies]
raw-window-handle = { version = "0.5" }
rfd = "0.10.2"

[target.'cfg(not(target_os = "macos"))'.dependencies]
rfd = "0.10.0"

[patch.crates-io]
rfd = { version = "0.10.2", git = "https://github.com/bedalton/rfd-for-tauri-macos" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
